; ModuleID = '/home/carl/AnghaBench/libevent/extr_arc4random.c_arc4random_addrandom.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_arc4random.c_arc4random_addrandom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rs_initialized = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @arc4random_addrandom(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @ARC4_LOCK_()
  %7 = load i32, i32* @rs_initialized, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = call i32 (...) @arc4_stir()
  br label %11

11:                                               ; preds = %9, %2
  store i32 0, i32* %5, align 4
  br label %12

12:                                               ; preds = %25, %11
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %28

16:                                               ; preds = %12
  %17 = load i8*, i8** %3, align 8
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %17, i64 %19
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %5, align 4
  %23 = sub nsw i32 %21, %22
  %24 = call i32 @arc4_addrandom(i8* %20, i32 %23)
  br label %25

25:                                               ; preds = %16
  %26 = load i32, i32* %5, align 4
  %27 = add nsw i32 %26, 256
  store i32 %27, i32* %5, align 4
  br label %12

28:                                               ; preds = %12
  %29 = call i32 (...) @ARC4_UNLOCK_()
  ret void
}

declare dso_local i32 @ARC4_LOCK_(...) #1

declare dso_local i32 @arc4_stir(...) #1

declare dso_local i32 @arc4_addrandom(i8*, i32) #1

declare dso_local i32 @ARC4_UNLOCK_(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
